css: fixup footnote positioning on mobile

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -297,7 +297,7 @@ sub {
   }
 
   .footnotes ol {
-    padding-left: 1.4rem;
+    padding-left: 1.8rem;
   }
   .footnotes p {
     display: inline;
